// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a form Button 1`] = `
<Button
  type="form"
>
  Click me !
</Button>
`;

exports[`Button renders a primary Button by default 1`] = `
<Button
  type="primary"
>
  Click me !
</Button>
`;

exports[`Button renders a secondary Button 1`] = `
<Button
  type="secondary"
>
  Click me !
</Button>
`;
